fix: spacing

--- a/components/About/About.css
+++ b/components/About/About.css
@@ -3,7 +3,6 @@
     margin: 0 auto;
     
     box-sizing: border-box;
-    margin-bottom: 8.875rem;
 }
 
 .company-content {
@@ -130,8 +129,13 @@
 
 @media screen and (max-width: 1090px) {
 
+    .company-container {
+        padding-bottom: 300px;
+    }
+
     .company-content {
         flex-direction: column;
+        margin-bottom: 142px;
     }
 
     .institutional-video{
@@ -171,7 +175,6 @@
         font-weight: 300;
         line-height: 150%;
         max-width: 100%;
-        
     }
     
 }
@@ -204,6 +207,13 @@
         max-width: 100%;
         max-height: 100%;
         min-width: 250px;
+    }
+
+   
+
+    .company-content {
+        flex-direction: column;
+        margin-bottom: 250px;
     }
 
   
